--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             theme: {
                 extend: {
                     colors: {
-                        clifford: '#da373d',
+                        'color-yellow': '#B68C5A',
+                        'color-black': '#414040',
+                        'color-gray': '#707070',
                     }
                 }
             }
@@ -39,8 +41,58 @@
 </head>
 
 <body>
-    <header>
+    <header class="container mx-auto mt-5 lg:mt-12">
+        <!-- navbar start -->
+        <nav class="max-w-7xl mx-auto">
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                    <div class="dropdown">
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </div>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                            <li><a>Home</a></li>
+                            <li><a>Services</a></li>
+                            <li><a>Cases</a></li>
+                            <li><a>blog</a></li>
+                            <li><a>Contact Us</a></li>
+                            <li class="flex md:hidden"><a>Free Consultation</a></li>
+                        </ul>
+                    </div>
+                    <!-- navbar logo -->
+                    <div>
+                        <a class="text-xl" href="#"><img src="images/logo2.png" alt=""></a>
+                    </div>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <div class="text-base text-color-gray breadcrumbs">
+                        <ul>
+                            <li><a>Home</a></li>
+                            <li><a>Services</a></li>
+                            <li><a>Cases</a></li>
+                            <li><a>Blog</a></li>
+                            <li><a>Contact Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="navbar-end">
+                    <button
+                        class="btn hidden md:flex bg-color-yellow text-white text-lg font-semibold hover:bg-transparent border border-yellow-700 hover:text-color-black">Free
+                        Consultation</button>
+                </div>
+            </div>
+        </nav>
+        <!-- banner section start -->
+        <section class="max-w-7xl mx-auto">
+            <div>
 
+            </div>
+        </section>
     </header>
     <main>
 
