--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <nav class="max-w-7xl mx-auto">
             <div class="navbar bg-base-100">
                 <div class="navbar-start">
-                    <div class="dropdown">
+                    <div class="dropdown mr-1">
                         <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
                                 stroke="currentColor">
@@ -55,7 +55,7 @@
                             </svg>
                         </div>
                         <ul tabindex="0"
-                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 font-poppins">
                             <li><a>Home</a></li>
                             <li><a>Services</a></li>
                             <li><a>Cases</a></li>
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="navbar-center hidden lg:flex">
-                    <div class="text-base text-color-gray breadcrumbs">
+                    <div class="text-base text-color-gray breadcrumbs font-poppins">
                         <ul>
                             <li><a>Home</a></li>
                             <li><a>Services</a></li>
@@ -82,15 +82,32 @@
                 </div>
                 <div class="navbar-end">
                     <button
-                        class="btn hidden md:flex bg-color-yellow text-white text-lg font-semibold hover:bg-transparent border border-yellow-700 hover:text-color-black">Free
+                        class="btn hidden md:flex bg-color-yellow text-white text-lg font-semibold font-poppins hover:bg-transparent hover:text-color-black">Free
                         Consultation</button>
                 </div>
             </div>
         </nav>
         <!-- banner section start -->
-        <section class="max-w-7xl mx-auto">
-            <div>
-
+        <section class="max-w-7xl mx-auto mt-5 p-2 lg:mt-12">
+            <div
+                class="flex flex-col items-center justify-center min-h-[550px] bg-cover bg-no-repeat bg-right lg:bg-center bg-[url('./images/banner.png')] rounded-lg">
+                <div class="text-center text-white">
+                    <h1 class="text-7xl font-extrabold font-garamond mb-6">
+                        We Provide Effective <br>
+                        Legal Solutions
+                    </h1>
+                    <p class="text-base font-normal font-poppins max-w-[679px] mx-auto">There are many variations of
+                        passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by
+                        injected humour.</p>
+                    <div class="mt-8 space-x-3">
+                        <input class="border-none outline-none
+                        px-4 py-3 text-color-gray test-base font-poppins rounded-lg" type="search"
+                            placeholder="Search your Services">
+                        <input
+                            class="bg-color-yellow px-5 py-3 text-base font-poppins font-medium rounded-lg cursor-pointer"
+                            type="button" value="Search">
+                    </div>
+                </div>
             </div>
         </section>
     </header>
