finished banner section with responsive all devices

--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
         <!-- banner section start -->
         <section class="max-w-7xl mx-auto mt-5 p-2 lg:mt-12">
             <div
-                class="flex flex-col items-center justify-center min-h-[550px] bg-cover bg-no-repeat bg-right lg:bg-center bg-[url('./images/banner.png')] rounded-lg">
+                class="flex flex-col items-center justify-center min-h-[550px] object-cover bg-cover bg-no-repeat bg-center md:bg-right lg:bg-center bg-[url('./images/banner.png')] rounded-lg p-3">
                 <div class="text-center text-white">
-                    <h1 class="text-7xl font-extrabold font-garamond mb-6">
+                    <h1 class="text-4xl lg:text-7xl font-extrabold font-garamond mb-6">
                         We Provide Effective <br>
                         Legal Solutions
                     </h1>
                     <p class="text-base font-normal font-poppins max-w-[679px] mx-auto">There are many variations of
                         passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by
                         injected humour.</p>
-                    <div class="mt-8 space-x-3">
+                    <div class="mt-8 space-x-3 space-y-3">
                         <input class="border-none outline-none
                         px-4 py-3 text-color-gray test-base font-poppins rounded-lg" type="search"
                             placeholder="Search your Services">
