--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 </head>
 
 <body>
+    <!-- header section start -->
     <header class="container mx-auto mt-5 lg:mt-12">
         <!-- navbar start -->
         <nav class="max-w-7xl mx-auto">
@@ -92,7 +93,7 @@
             <div
                 class="flex flex-col items-center justify-center min-h-[550px] object-cover bg-cover bg-no-repeat bg-center md:bg-right lg:bg-center bg-[url('./images/banner.png')] rounded-lg p-3">
                 <div class="text-center text-white">
-                    <h1 class="text-4xl lg:text-7xl font-extrabold font-garamond mb-6">
+                    <h1 class="text-4xl md:text-5xl lg:text-7xl font-extrabold font-garamond mb-6">
                         We Provide Effective <br>
                         Legal Solutions
                     </h1>
@@ -111,8 +112,112 @@
             </div>
         </section>
     </header>
-    <main>
-
+    <!-- main section start -->
+    <main class="container mx-auto mt-5 lg:mt-12">
+        <!-- legal practice area section -->
+        <section class="max-w-7xl mx-auto mt-5 p-2 md:mt-12 lg:mt-28">
+            <div class="">
+                <div class="text-center">
+                    <h3 class="text-4xl text-color-black font-extrabold font-garamond mb-6">The Legal Practice Area</h3>
+                    <p class="text-color-gray font-poppins max-w-2xl mx-auto">There are many variations of passages
+                        of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected
+                        humour.</p>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-3 mt-16">
+                    <!-- first card -->
+                    <div class="flex flex-col items-center justify-center">
+                        <figure class="px-10 pt-10">
+                            <img src="images/business.png" alt="business" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title text-3xl text-color-black font-garamond">Business Law</h2>
+                            <p class="text-color-gray font-poppins">There are many variations of passages of Lorem Ipsum
+                                available, but the majority have suffered alteration in some form, by injected humour.
+                            </p>
+                            <div class="card-actions">
+                                <button class=""><img src="images/Frame.png" alt=""></button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- second card -->
+                    <div
+                        class="flex flex-col items-center justify-center bg-gradient-to-b from-gray-200 to-white border">
+                        <figure class="px-10 pt-10">
+                            <img src="images/criminal.png" alt="business" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title text-3xl text-color-black font-garamond">Criminal Law</h2>
+                            <p class="text-color-gray font-poppins">There are many variations of passages of Lorem Ipsum
+                                available, but the majority have suffered alteration in some form, by injected humour.
+                            </p>
+                            <div class="card-actions">
+                                <button class=""><img src="images/Frame.png" alt=""></button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- third card -->
+                    <div class="flex flex-col items-center justify-center">
+                        <figure class="px-10 pt-10">
+                            <img src="images/child.png" alt="business" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title text-3xl text-color-black font-garamond">Child Support</h2>
+                            <p class="text-color-gray font-poppins">There are many variations of passages of Lorem Ipsum
+                                available, but the majority have suffered alteration in some form, by injected humour.
+                            </p>
+                            <div class="card-actions">
+                                <button class=""><img src="images/Frame.png" alt=""></button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- fourth card -->
+                    <div class="flex flex-col items-center justify-center border-r border-t">
+                        <figure class="px-10 pt-10">
+                            <img src="images/education.png" alt="business" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title text-3xl text-color-black font-garamond">Education Law</h2>
+                            <p class="text-color-gray font-poppins">There are many variations of passages of Lorem Ipsum
+                                available, but the majority have suffered alteration in some form, by injected humour.
+                            </p>
+                            <div class="card-actions">
+                                <button class=""><img src="images/Frame.png" alt=""></button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- fifth card -->
+                    <div class="flex flex-col items-center justify-center">
+                        <figure class="px-10 pt-10">
+                            <img src="images/divorce.png" alt="business" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title text-3xl text-color-black font-garamond">Divorce Law</h2>
+                            <p class="text-color-gray font-poppins">There are many variations of passages of Lorem Ipsum
+                                available, but the majority have suffered alteration in some form, by injected humour.
+                            </p>
+                            <div class="card-actions">
+                                <button class=""><img src="images/Frame.png" alt=""></button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- sixth card -->
+                    <div class="flex flex-col items-center justify-center border-l border-t">
+                        <figure class="px-10 pt-10">
+                            <img src="images/tax.png" alt="business" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title text-3xl text-color-black font-garamond">Tax Law</h2>
+                            <p class="text-color-gray font-poppins">There are many variations of passages of Lorem Ipsum
+                                available, but the majority have suffered alteration in some form, by injected humour.
+                            </p>
+                            <div class="card-actions">
+                                <button class=""><img src="images/Frame.png" alt=""></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
